Update fix on mobile responsive design

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -257,6 +257,19 @@ footer {
 }
 
 @media screen and (max-width: 1100px) {
+  .home-content-1 .home-content-1-greet,
+  .home-content-1 .home-content-1-desc {
+    text-align: center;
+  }
+
+  .card-content-home {
+    padding: 0px;
+  }
+
+  .card-content {
+    padding: 0px;
+  }
+
   .card-content-inner-home {
     flex-direction: column;
   }
@@ -267,29 +280,35 @@ footer {
   }
 
   @media screen and (max-width: 520px) {
+    .home-content-1 .home-content-1-greet,
+    .home-content-1 .home-content-1-desc {
+      text-align: center;
+    }
+
+    .card-content-home {
+      padding: 0px;
+    }
     .card-content-inner-home {
       flex-direction: column;
     }
 
     .home-content-1 .home-content-1-greet {
       font-size: 40px;
-      text-align: center;
-      height: 70px;
+      height: 50px;
     }
 
     .home-content-1 .home-content-1-desc {
       line-height: 20px;
-      font-size: 20px;
-      text-align: center;
+      font-size: 18px;
     }
 
     .timeline-container {
       line-height: 18px;
+      justify-content: center;
     }
     .timeline-container span,
     .timeline {
       font-size: 18px;
-      padding-left: 5px;
     }
 
     .home-content-1 {
@@ -298,14 +317,73 @@ footer {
     .home-content-2 {
       justify-content: center;
       padding: 0px;
-      padding-top: 50px;
+      padding-top: 80px;
+    }
+
+    .home-content-2 img {
+      height: 250px;
     }
 
     .timeline:hover #timeline-content {
-      line-height: 20px;
+      display: none;
+    }
+
+    .timeline:active #timeline-content {
+      display: flex;
       position: absolute;
-      right: 45px;
-      text-align: right;
+      border: 1px white solid;
+      left: 0px;
+      width: 100%;
+      justify-content: center;
+      line-height: 30px;
+    }
+
+    .timeline div ul li a:hover {
+      border: 1px dashed var(--alittle_purple);
+    }
+  }
+
+  @media screen and (orientation: landscape) {
+    .home-content-1 .home-content-1-greet,
+    .home-content-1 .home-content-1-desc {
+      text-align: center;
+    }
+
+    .card-content-home {
+      padding-top: 50px;
+    }
+    .card-content-inner-home {
+      flex-direction: row;
+    }
+
+    .home-content-1 .home-content-1-greet {
+      font-size: 40px;
+      height: 50px;
+    }
+
+    .home-content-1 .home-content-1-desc {
+      line-height: 20px;
+      font-size: 18px;
+    }
+
+    .timeline-container {
+      line-height: 18px;
+      justify-content: center;
+    }
+    .timeline-container span,
+    .timeline {
+      font-size: 18px;
+    }
+
+    .home-content-1 {
+      flex: 0 0 auto;
+    }
+    .home-content-2 {
+      justify-content: center;
+      padding: 0px;
+    }
+    .home-content-2 img {
+      height: 150px;
     }
   }
 }
